tdf#145129 XLSX import: round down default row height

Same as tdf#144642, but with default row height.

like table layout of MSO does, e.g. 20 pt to 19.5 pt.

Changing table default row height is only for interoperability.
To avoid of regressions, apply this workaround only for
documents created in MSO.

Note: likely this is an old adjustment for low-resolution
monitors, where 0.75 is the factor between 96 ppi of Windows
resolution and (originally) 72 ppi of monitor resolutions.

Co-authored-by: Tibor Nagy (NISZ)
Change-Id: Iefb615b56e5ddc11a5e839cf6d90516b18646045